<resources>
    <string name="app_name">Reporter</string>
    <string name="report">report</string>
    <string name="report_ending">er</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="report_text">Report Text</string>
    <string name="add_report_button_text">Add Report</string>
    <string name="report_date">Report Date</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="name_label">Name</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="email_label">Email</string>
    <string name="preferences_file_key">key</string>
    <string name="token">token</string>
    <string name="service_url_base">http://192.168.0.26:8080/</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="back_button_text">Back</string>
    <string name="create_report_label">Create Report</string>
    <string name="write_report_hint">Write a short description of your report ...</string>
</resources>
